tests/ui/edge_cases/mutate_while_iterate.stderr
error: undefined function `push`
 --> tests/ui/edge_cases/mutate_while_iterate.rs:9:15
  |
9 |             x.push(i);
  |               ^^^^
